updated room change

--- a/_posts/2019-10-10-HackLAN.md
+++ b/_posts/2019-10-10-HackLAN.md
@@ -12,7 +12,7 @@ Many of you have likely heard of a LAN party, where several people come together
 
 ### Where
 
-Our HackLAN will be held on October 24 (week 4), at our normal thursday meeting time and location: in DBH 1423, at 6:30pm. The HackLAN will be in between normal meeting weeks, as we are meeting on odd numbered weeks this quarter. 
+Our HackLAN will be held on October 24 (week 4), at our normal thursday meeting time, but a different location: in DBH 3011, at 6:30pm. The HackLAN will be in between normal meeting weeks, as we are meeting on odd numbered weeks this quarter. 
 
 
 ### How To Participate
